# airtelmoney-py

./: .env.example  .gitignore  AirtelMoney.postman_collection.json  LICENSE  README.md  encrypt_pin.py  pyproject.toml  requirements.txt
.github/: RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.5.md  RELEASE_NOTES_v1.0.6.md
.github/workflows/: publish.yml  test.yml
examples/: quickstart.py
src/airtelmoney/: __init__.py  client.py  encryption.py  errors.py  exceptions.py
src/airtelmoney/resources/: __init__.py  account.py  base.py  collection.py  disbursement.py  kyc.py
tests/: test_client.py  test_encryption.py
